data preprocess and fix transformer

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ data/
 hf_models/
 scripts_training2testing/examples/saved_model/
 .vscode/
+scripts_training2testing/examples/features/
+scripts_training2testing/examples/experiment_logs/
