--- a/my_configs/data_config.json
+++ b/my_configs/data_config.json
@@ -18,8 +18,7 @@
             3,
             4
         ],
-    
-         "train_valid_file": "kc_level/train_valid_seq`uences.csv",
+        "train_valid_file": "kc_level/train_valid_seq`uences.csv",
         "test_original_file": "kc_level/test.csv",
         "test_question_file": "kc_level/test_question_window_sequences.csv",
         "test_question_window_file": "kc_level/test_question_window_sequences.csv",
@@ -39,6 +38,38 @@
             "concepts"
         ],
         "max_concepts": 4,
+        "min_seq_len": 3,
+        "maxlen": 200,
+        "emb_path": "",
+        "train_valid_original_file": "train_valid.csv",
+        "train_valid_file": "train_valid_sequences.csv",
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
+        "test_original_file": "test.csv",
+        "test_file": "test_sequences.csv",
+        "test_window_file": "test_window_sequences.csv",
+        "test_question_file": "test_question_sequences.csv",
+        "test_question_window_file": "test_question_window_sequences.csv",
+        "train_valid_original_file_quelevel": "train_valid_quelevel.csv",
+        "train_valid_file_quelevel": "train_valid_sequences_quelevel.csv",
+        "test_file_quelevel": "test_sequences_quelevel.csv",
+        "test_window_file_quelevel": "test_window_sequences_quelevel.csv",
+        "test_original_file_quelevel": "test_quelevel.csv"
+    },
+    "nips_task34": {
+        "dpath": "/home3/zhiyu/code-5/CRKT/five-thinkkt/data/Eedi/data/train_data",
+        "num_q": 948,
+        "num_c": 57,
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
+        "max_concepts": 2,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
