--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ scripts_training2testing/examples/saved_model/
 .vscode/
 scripts_training2testing/examples/features/
 scripts_training2testing/examples/experiment_logs/
+scripts_training2testing/examples/experiment_input_logs/
