--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ scripts_training2testing/examples/features/
 scripts_training2testing/examples/experiment_logs/
 scripts_training2testing/examples/experiment_input_logs/
 scripts_training2testing/examples/cot_cache/
+scripts_training2testing/examples/cot_cache_global/
