--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ scripts_training2testing/examples/experiment_input_logs/
 scripts_training2testing/examples/cot_cache/
 scripts_training2testing/examples/cot_cache_global/
 logs/
+cot_logs/
