--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ cot_logs/
 scripts_training2testing/examples/cot_logs/
 scripts_training2testing/examples/bs_logs/
 saved_model/
+experiment_results_summary.csv
