--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ scripts_training2testing/examples/bs_logs/
 saved_model/
 experiment_results_summary.csv
 scripts_training2testing/cot_cache
+JiT/fid_stats/
